test/corpus/highlight_statement.txt
================================================================================
Empty highlight
================================================================================

highlight
hi
high

--------------------------------------------------------------------------------

(script_file
  (highlight_statement)
  (highlight_statement)
  (highlight_statement))

================================================================================
Highlight clear
================================================================================

hi clear
hi clear Foo

--------------------------------------------------------------------------------

(script_file
  (highlight_statement)
  (highlight_statement
    (hl_group)))

================================================================================
Highlight none
================================================================================

high Foo NONE

--------------------------------------------------------------------------------

(script_file
  (highlight_statement
    (hl_group)
    (hl_group)))

================================================================================
Highlight cterm
================================================================================

hi Foo cterm=bold
hi Foo term=bold
hi Foo cterm=underline
hi Foo cterm=undercurl
hi Foo cterm=underdouble
hi Foo cterm=underdotted
hi Foo cterm=underdashed
hi Foo cterm=strikethrough
hi Foo cterm=reverse
hi Foo cterm=inverse
hi Foo cterm=italic
hi Foo cterm=standout
hi Foo cterm=nocombine
hi Foo cterm=NONE
hi Foo cterm=standout,italic
hi Foo cterm=italic,bold,underdotted

--------------------------------------------------------------------------------

(script_file
  (highlight_statement
    (hl_group)
    (hl_attribute))
  (highlight_statement
    (hl_group)
    (hl_attribute))
  (highlight_statement
    (hl_group)
    (hl_attribute))
  (highlight_statement
    (hl_group)
    (hl_attribute))
  (highlight_statement
    (hl_group)
    (hl_attribute))
  (highlight_statement
    (hl_group)
    (hl_attribute))
  (highlight_statement
    (hl_group)
    (hl_attribute))
  (highlight_statement
    (hl_group)
    (hl_attribute))
  (highlight_statement
    (hl_group)
    (hl_attribute))
  (highlight_statement
    (hl_group)
    (hl_attribute))
  (highlight_statement
    (hl_group)
    (hl_attribute))
  (highlight_statement
    (hl_group)
    (hl_attribute))
  (highlight_statement
    (hl_group)
    (hl_attribute))
  (highlight_statement
    (hl_group)
    (hl_attribute))
  (highlight_statement
    (hl_group)
    (hl_attribute))
  (highlight_statement
    (hl_group)
    (hl_attribute)))

================================================================================
Highlight start stop
================================================================================

hi Foo start=bleh stop=bar
hi Foo start=<Space>Foo
hi Foo start=<Esc>[27h;<Esc>[<Space>r;

--------------------------------------------------------------------------------

(script_file
  (highlight_statement
    (hl_group)
    (hl_attribute)
    (hl_attribute))
  (highlight_statement
    (hl_group)
    (hl_attribute))
  (highlight_statement
    (hl_group)
    (hl_attribute)))

================================================================================
Highglight ctermfg ctermbg
================================================================================

hi Foo ctermfg=0
hi Foo ctermfg=0*
hi Foo ctermfg=grey ctermbg=darkblue
highlight Visual ctermfg=bg ctermbg=fg

--------------------------------------------------------------------------------

(script_file
  (highlight_statement
    (hl_group)
    (hl_attribute))
  (highlight_statement
    (hl_group)
    (hl_attribute))
  (highlight_statement
    (hl_group)
    (hl_attribute
      (color))
    (hl_attribute
      (color)))
  (highlight_statement
    (hl_group)
    (hl_attribute
      (color))
    (hl_attribute
      (color))))

================================================================================
Highlight gui
================================================================================

hi Foo gui=italic
hi Foo gui=bold

--------------------------------------------------------------------------------

(script_file
  (highlight_statement
    (hl_group)
    (hl_attribute))
  (highlight_statement
    (hl_group)
    (hl_attribute)))

================================================================================
Highlight guifg guibg guisp
================================================================================

hi Foo guifg=NONE
hi Foo guibg=bg
hi def Foo guisp=fg
hi default Foo guifg=foreground
highlight Comment guifg=#11f0c3 guibg=#ff00ff
hi Comment guifg='salmon pink'

--------------------------------------------------------------------------------

(script_file
  (highlight_statement
    (hl_group)
    (hl_attribute
      (color)))
  (highlight_statement
    (hl_group)
    (hl_attribute
      (color)))
  (highlight_statement
    (hl_group)
    (hl_attribute
      (color)))
  (highlight_statement
    (hl_group)
    (hl_attribute
      (color)))
  (highlight_statement
    (hl_group)
    (hl_attribute
      (color))
    (hl_attribute
      (color)))
  (highlight_statement
    (hl_group)
    (hl_attribute
      (color))))

================================================================================
Highlight font
================================================================================

hi Foo font=-misc-fixed-bold-r-normal--14-130-75-75-c-70-iso8859-1
hi Foo font='Monospace 10'

--------------------------------------------------------------------------------

(script_file
  (highlight_statement
    (hl_group)
    (hl_attribute
      (font)))
  (highlight_statement
    (hl_group)
    (hl_attribute
      (font))))

================================================================================
Highlight blend
================================================================================

hi Foo blend=10

--------------------------------------------------------------------------------

(script_file
  (highlight_statement
    (hl_group)
    (hl_attribute
      (integer_literal))))

================================================================================
Highlight link
================================================================================

highlight link Foo Bar
hi link Foo Bar
hi defa link Foo Bar
highlight default link Foo Bar

--------------------------------------------------------------------------------

(script_file
  (highlight_statement
    (hl_group)
    (hl_group))
  (highlight_statement
    (hl_group)
    (hl_group))
  (highlight_statement
    (hl_group)
    (hl_group))
  (highlight_statement
    (hl_group)
    (hl_group)))

================================================================================
Highlight treesitter group
================================================================================

hi link @string.special String

--------------------------------------------------------------------------------

(script_file
  (highlight_statement
    (hl_group)
    (hl_group)))
